@@ -1,3 +1,9 @@
+2002-03-02  Per Bothner  <per@bothner.com>
+
+	* XQuery.java (parseFile):  Now throws IOException and SyntaxException.
+
+	* XQuery.java (<init>):  HTTP module moved to slib package.
+
 2002-02-16  Per Bothner  <per@bothner.com>
 
 	* XQuery.java (<init>):  Don't print error if library class not found.
